modules/metabase/chart/templates/postgres-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-ingressroute
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`mb.tokhirov.uz`)
      services:
        - name: metabase-postgresql
          port: 5432
      middlewares:
        - name: tailscale-tcp-ingress-only
  tls:
    passthrough: true
